# Useful_habits

./: .dockerignore  .env.docker  .env.sample  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: services.py  settings.py  tasks.py
habit_tracker/: paginators.py  permissions.py  serializers.py  tests.py  urls.py  views.py
habit_tracker/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_award.py  0004_alter_habit_owner.py  0005_habit_created_on.py
users/: serializers.py  tests.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_telegram_id.py
