[tool.poetry]
name = "Useful_habits"
version = "0.1.0"
description = ""
authors = ["Helen85236 <79532870251@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
psycopg2-binary = "^2.9.7"
pillow = "^10.0.0"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"